# bilby-entity-extraction-pipeline

./: .gitignore  Dockerfile  README.md  airflow.cfg  airflow.db  pyproject.toml  requirements.txt  standalone_admin_password.txt  start.sh
airflow/: airflow.cfg  airflow.db
dags/: entity_extraction_dag.py  example.py
data/: documents.csv  entity_aliases.csv
output/: extracted_entities.csv  extracted_entities.db
scripts/: export_to_csv.py  extract_entities.py
